fixed image gap

--- a/css/main.css
+++ b/css/main.css
@@ -307,7 +307,7 @@ button {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(5, 15vw);
-        grid-gap: 1rem;
+        grid-gap: .5rem;
     }
 
     .thumbs {
@@ -316,8 +316,6 @@ button {
         object-fit: cover;
     }
 
-
-    
     .results_img {
         max-height: 100%;
         min-width: 100%;
